Implemented endpoints for teachers management
