# src/teachers/dto/update-teacher.dto.ts
@@ -1,0 +1,5 @@
+// dto/update-teacher.dto.ts
+import { PartialType } from '@nestjs/mapped-types';
+import { CreateTeacherDto } from './create-teacher.dto';
+
+export class UpdateTeacherDto extends PartialType(CreateTeacherDto) {}
